; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_repos/extr_node_tree.c_open_root.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_repos/extr_node_tree.c_open_root.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.edit_baton = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i8, i32 }
%struct.node_baton = type { %struct.TYPE_2__*, i32*, %struct.edit_baton* }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@svn_node_dir = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i32, i32*, i8**)* @open_root to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @open_root(i8* %0, i32 %1, i32* %2, i8** %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8**, align 8
  %9 = alloca %struct.edit_baton*, align 8
  %10 = alloca %struct.node_baton*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i8** %3, i8*** %8, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = bitcast i8* %11 to %struct.edit_baton*
  store %struct.edit_baton* %12, %struct.edit_baton** %9, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = call %struct.node_baton* @apr_pcalloc(i32* %13, i32 24)
  store %struct.node_baton* %14, %struct.node_baton** %10, align 8
  %15 = load %struct.edit_baton*, %struct.edit_baton** %9, align 8
  %16 = load %struct.node_baton*, %struct.node_baton** %10, align 8
  %17 = getelementptr inbounds %struct.node_baton, %struct.node_baton* %16, i32 0, i32 2
  store %struct.edit_baton* %15, %struct.edit_baton** %17, align 8
  %18 = load %struct.node_baton*, %struct.node_baton** %10, align 8
  %19 = getelementptr inbounds %struct.node_baton, %struct.node_baton* %18, i32 0, i32 1
  store i32* null, i32** %19, align 8
  %20 = load %struct.edit_baton*, %struct.edit_baton** %9, align 8
  %21 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = call %struct.TYPE_2__* @create_node(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i32* null, i32 %22)
  %24 = load %struct.edit_baton*, %struct.edit_baton** %9, align 8
  %25 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %24, i32 0, i32 1
  store %struct.TYPE_2__* %23, %struct.TYPE_2__** %25, align 8
  %26 = load %struct.node_baton*, %struct.node_baton** %10, align 8
  %27 = getelementptr inbounds %struct.node_baton, %struct.node_baton* %26, i32 0, i32 0
  store %struct.TYPE_2__* %23, %struct.TYPE_2__** %27, align 8
  %28 = load i32, i32* @svn_node_dir, align 4
  %29 = load %struct.node_baton*, %struct.node_baton** %10, align 8
  %30 = getelementptr inbounds %struct.node_baton, %struct.node_baton* %29, i32 0, i32 0
  %31 = load %struct.TYPE_2__*, %struct.TYPE_2__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 1
  store i32 %28, i32* %32, align 4
  %33 = load %struct.node_baton*, %struct.node_baton** %10, align 8
  %34 = getelementptr inbounds %struct.node_baton, %struct.node_baton* %33, i32 0, i32 0
  %35 = load %struct.TYPE_2__*, %struct.TYPE_2__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i32 0, i32 0
  store i8 82, i8* %36, align 4
  %37 = load %struct.node_baton*, %struct.node_baton** %10, align 8
  %38 = bitcast %struct.node_baton* %37 to i8*
  %39 = load i8**, i8*** %8, align 8
  store i8* %38, i8** %39, align 8
  %40 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %40
}

declare dso_local %struct.node_baton* @apr_pcalloc(i32*, i32) #1

declare dso_local %struct.TYPE_2__* @create_node(i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
